--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: morning
 on:
   schedule:
-  - cron:  '0 23 * * *'
+  - cron:  '0 8 * * *'
+  timezone: Asia/Shanghai
   workflow_dispatch:
 
 jobs:
